<resources>

    <!--Application Name-->
    <string name="app_name">Gigya Sample</string>


    <!--Initialize Activity-->
    <string name="title_initialize_activity">Welcome</string>

    <string name="input_field_hint_api_key">Api Key</string>
    <string name="input_field_hint_datacenter">Data Center</string>

    <string name="button_text_initialize">Initialize</string>

    <string name="input_field_api_key_error_msg">Api Key is not valid!</string>


    <!--Login Activity-->
    <string name="title_login_activity">Please select your login method</string>
    <string name="logout_error_message">Login Failed</string>


    <!--Account Activity-->
    <string name="field_firstName">First Name</string>
    <string name="field_lastName">Last Name</string>
    <string name="button_text_update">Update</string>
    <string name="button_text_logout">Logout</string>
    <string name="button_text_purchase">Purchase</string>
    <string name="dialog_logging_out">Logging Out...</string>
    <string name="dialog_updating_user_data">Updating User Details...</string>
    <string name="dialog_purchase_item">Please Wait...</string>


    <string name="facebook_app_id">896102580574689</string>
    <string-array name="datacenter_array">
        <item>us1.gigya.com</item>
        <item>eu1.gigya.com</item>
        <item>au1.gigya.com</item>
        <item>ru1.gigya.com</item>
        <item>cn1.gigya-api.cn</item>
        <item>cn1.gigya-api.cn</item>
        <item>il1.gigya.com</item>
        <item>local.gigya.com</item>
    </string-array>

    <string name="sign_in">Sign In</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key" >use_fingerprint_to_authenticate_key</string>
    <string name="password">Password</string>

    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
</resources>
