<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    android:orientation="vertical"
    tools:context=".ui.activities.InitializeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_initialize_activity"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />
    </RelativeLayout>

    <com.gigya.android.sdk.sample.ui.views.InitScreenInputAreaView
        android:id="@+id/inputAreaView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_weight="0.5"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/apikey_input_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/apikey_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_field_hint_api_key" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/datacenter_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_init"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/button_text_initialize" />
    </com.gigya.android.sdk.sample.ui.views.InitScreenInputAreaView>
</LinearLayout>